@@ -13,10 +13,13 @@ mv find-order/target/*.jar ~/jar
 mv find-portal/target/*.jar ~/jar
 mv find-user/target/*.jar ~/jar
 cd ~/jar || exit
+nohup java -jar -server -Xmx256m -Xss32m -Xms4m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8071 find-user-8081.jar >find-user-8071.log 2>&1 &
 nohup java -jar -server -Xmx256m -Xss32m -Xms4m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8081 find-user-8081.jar >find-user-8081.log 2>&1 &
 nohup java -jar -server -Xmx256m -Xss32m -Xms4m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8091 find-user-8081.jar >find-user-8091.log 2>&1 &
+nohup java -jar -server -Xmx256m -Xss32m -Xms4m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8072 find-message-8082.jar >find-message-8072.log 2>&1 &
 nohup java -jar -server -Xmx256m -Xss32m -Xms4m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8082 find-message-8082.jar >find-message-8082.log 2>&1 &
 nohup java -jar -server -Xmx256m -Xss32m -Xms4m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8092 find-message-8082.jar >find-message-8092.log 2>&1 &
+nohup java -jar -server -Xmx256m -Xss32m -Xms4m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8073 find-dynamic-8083.jar >find-dynamic-8073.log 2>&1 &
 nohup java -jar -server -Xmx256m -Xss32m -Xms4m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8083 find-dynamic-8083.jar >find-dynamic-8083.log 2>&1 &
 nohup java -jar -server -Xmx256m -Xss32m -Xms4m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8093 find-dynamic-8083.jar >find-dynamic-8093.log 2>&1 &
 nohup java -jar -server -Xmx256m -Xss32m -Xms4m -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -Dcom.alibaba.nacos.client.naming.ctimeout=5000 -Dspring.profiles.active=test -Dserver.port=8084 find-portal-8084.jar >find-portal-8084.log 2>&1 &
